--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header class="top-bar">
     <div class="logo">
-      <img src="image/logo-header.png" alt="FUTA Logo">
+      <img src="logo-header.png" alt="FUTA Logo">
       <span>FUTA Bus Lines<br><small>Chất Lượng Là Danh Dự</small></span>
     </div>
     <nav class="main-nav">
@@ -28,7 +28,7 @@
     <button class="arrow left">&#x276E;</button>
     <div class="hero-content">
       <div class="bus-group">
-        <img src="image/slide.png" alt="Xe Bus">
+        <img src="slide.png" alt="Xe Bus">
       </div>
     </div>
     <button class="arrow right">&#x276F;</button>
@@ -36,7 +36,7 @@
 
   <footer>
     <div class="footer-left">
-      <img src="image/logo-header.png" alt="FUTA">
+      <img src="logo-header.png" alt="FUTA">
       <p>FUTA Bus Lines<br><small>CHẤT LƯỢNG LÀ DANH DỰ</small></p>
       <div class="socials">
         <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="YouTube"></a>
